[package]
name = "mouse-steering"
version = "3.0.0"
edition = "2021"

[dependencies]
device_query = "2.0.0"
directories = "5.0.1"
minifb = "0.26.0"
serde = { version = "1.0.202", features = ["derive"] }
toml = "0.8.13"
vigem-client = "0.1.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_Input", "Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
